<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.pkfcooperparry.template.ui.form.FormViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/topLevel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/content_description" />

        <RelativeLayout
            android:id="@+id/topButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:adjustViewBounds="true"
                android:onClick="@{() -> viewModel.onBackClick()}"

                android:src="@drawable/bg_back_selector"
                android:textSize="20sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/toollayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topButtonLayout"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:text="@string/visit_details"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/txtTitle"
                android:fontFamily="@font/main_font"
                android:text="@string/nicholas_associates"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/main_font"
                android:text="@{viewModel.formId}"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toollayout"
            android:gravity="center"
            android:text="@string/no_items_found"
            android:visibility="@{viewModel.itemsExist ? View.GONE : View.VISIBLE}" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toollayout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:visibility="@{viewModel.itemsExist ? View.VISIBLE : View.GONE}" />


    </RelativeLayout>
</layout>